--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2016-2017 Vinnie Falco (vinnie dot falco at gmail dot com)
+# Copyright (c) 2022 Alan de Freitas (alandefreitas@gmail.com)
 #
 # Distributed under the Boost Software License, Version 1.0. (See accompanying
 # file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
@@ -7,34 +7,21 @@
 # Official repository: https://github.com/boostorg/static_string
 #
 
-function (DoGroupSources curdir rootdir folder)
-    file (GLOB children RELATIVE ${PROJECT_SOURCE_DIR}/${curdir} ${PROJECT_SOURCE_DIR}/${curdir}/*)
-    foreach (child ${children})
-        if (IS_DIRECTORY ${PROJECT_SOURCE_DIR}/${curdir}/${child})
-            DoGroupSources (${curdir}/${child} ${rootdir} ${folder})
-        elseif (${child} STREQUAL "CMakeLists.txt")
-            source_group("" FILES ${PROJECT_SOURCE_DIR}/${curdir}/${child})
-        else()
-            string (REGEX REPLACE ^${rootdir} ${folder} groupname ${curdir})
-            string (REPLACE "/" "\\" groupname ${groupname})
-            source_group (${groupname} FILES ${PROJECT_SOURCE_DIR}/${curdir}/${child})
-        endif()
-    endforeach()
-endfunction()
+set(BOOST_STATIC_STRING_TESTS_FILES
+        CMakeLists.txt
+        Jamfile
+        constexpr_tests.hpp
+        compile_fail.hpp
+        static_string.cpp
+        )
 
-function (GroupSources curdir folder)
-    DoGroupSources (${curdir} ${curdir} ${folder})
-endfunction()
+source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${BOOST_STATIC_STRING_TESTS_FILES})
+add_executable(boost_static_string_tests ${BOOST_STATIC_STRING_TESTS_FILES})
 
-GroupSources (include/boost/static_string static_string)
-GroupSources (test "/")
-
-add_executable (tests
-    ${PROJECT_FILES}
-    Jamfile
-    static_string.cpp
-)
-
-target_link_libraries(tests boost_static_string)
-
-set_property(TARGET tests PROPERTY FOLDER "tests")
+# The include dependencies are found in the CMakeLists.txt
+# of the root project directory.
+# See: BOOST_STATIC_STRING_UNIT_TEST_LIBRARIES
+target_link_libraries(boost_static_string_tests PRIVATE
+        Boost::static_string
+        Boost::core)
+add_test(NAME boost_static_string_tests COMMAND boost_static_string_tests)
